# ChangeLog for net-im/kmess
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/kmess/ChangeLog,v 1.6 2003/02/12 08:02:07 vapier Exp $

*kmess-0.9.8 (15 December 2002) Bart Verwilst <verwilst@gentoo.org>

  New version.

*kmess-0.9.6 (20 June 2002) Bart Verwilst <verwilst@gentoo.org>

  Filetransfer added, and compiles with gcc 3.1

*kmess-0.9.5 (29 May 2002)

  29 May 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :

  Release Note:  Added a drop-down emoticon chooser to the chat window to 
	select emoticons; the ability to associate an image with each contact to 
	popup when the contact comes online; a new GPL emoticon theme, with 3 
	smiley colors; display of a contact's MSN profile via the RMB popup menu; 
	the ability to delete an unused account from the Settings menu; support 
	for international characters; the ability to enable / disable Other 
	Folder Notification; inviting contacts to join multi-party chats; and 
	Brazilian Portuguese and Italian translations. .

*kmess-0.9.3 (26 April 2002)

  26 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :

  Release Note:  Added a button and shortcut for adding carriage returns
  in chats; and a Spanish translation (untested). Re-enabled "you are 
  typing".


*kmess-0.9.2 (24 April 2002)

  24 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
  
  Initial version in Portage.. Enjoy!