@@ -1,6 +1,12 @@
 # ChangeLog for net-im/kmess
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/kmess/ChangeLog,v 1.6 2003/02/12 08:02:07 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/kmess/ChangeLog,v 1.7 2003/03/16 16:09:18 hannes Exp $
+
+*kmess-1.1 (16 Mar 2003)
+
+  16 Mar 2003; Hannes Mehnert <hannes@gentoo.org> kmess-1.1.ebuild:
+  version bump, closes bugs #15887, #17411, #17591. thanks to reporters of these
+  bugs.
 
 *kmess-0.9.8 (15 December 2002) Bart Verwilst <verwilst@gentoo.org>
 
